--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,38 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .new-post-icon {
+    @apply flex flex-row items-center hover:bg-gray-200 transition duration-300 w-full justify-center rounded-lg h-10 text-sm md:text-lg;
+  }
+
+  .input-login-signup {
+    @apply w-full rounded pl-3 p-2 my-2 border-gray-400 border focus:border-blue-300 focus:shadow-sm focus:shadow-blue-300 outline-none;
+  }
+
+  .dropdown-option {
+    @apply bg-white px-3 md:px-5 py-1 border border-gray-200 hover:bg-gray-200 duration-200 transition-all flex items-center;
+  }
+
+  .menu-icon {
+    @apply w-[5vw] md:w-[20vw] h-10 flex items-center hover:bg-gray-300 transition-all duration-200 rounded-lg md:p-3;
+  }
+
+  .contacts-icon {
+    @apply hover:bg-gray-300 transition-all duration-200 p-1 cursor-pointer rounded-full md:w-[1.35rem] md:h-[1.35rem] lg:w-6 lg:h-6 xl:w-7 xl:h-7;
+  }
+
+  .sender {
+    @apply bg-blue-600 text-white p-1 px-3 ml-auto mr-3 mt-[0.2rem] rounded-2xl w-max max-w-[12rem] break-words block;
+  }
+
+  .receiver {
+    @apply bg-gray-200 p-1 px-3 mr-auto ml-3 mt-[0.2rem] rounded-2xl w-max max-w-[12rem] break-words block;
+  }
+}
+
+html {
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
